tmux shortcuts for maximizing/minimizing windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,7 @@
 set -g prefix C-a
+
+new-window -d -k -n tmux-zoom -t 99 'clear && echo -n "ZOOM" "MARK" & read'
+unbind +
+bind + find-window "ZOOM[ ]MARK" \; swap-pane -s tmux-zoom.0 \; last-window \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
+unbind -
+bind - find-window "ZOOM[ ]MARK" \; swap-pane -s tmux-zoom.0
