--- a/.gitconfig
+++ b/.gitconfig
@@ -11,3 +11,5 @@
 	aa = add --all
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
 	sl = stash
+[core]
+	editor = vim
