--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
 	st = status
 	cp = cherry-pick
 	aa = add --all
-	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	sl = stash
 [core]
 	editor = vim
