enable mouse for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,6 @@
 set -g prefix C-a
 
-new-window -d -k -n tmux-zoom -t 99 'clear && echo -n "ZOOM" "MARK" & read'
-unbind +
-bind + find-window "ZOOM[ ]MARK" \; swap-pane -s tmux-zoom.0 \; last-window \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
-unbind -
-bind - find-window "ZOOM[ ]MARK" \; swap-pane -s tmux-zoom.0
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
