--- a/.gitconfig
+++ b/.gitconfig
@@ -12,5 +12,6 @@
   aa = add --all
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
   sl = stash
+  of = diff trunk --name-only
 [core]
   editor = vim
