--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,8 @@ unbind +
 bind + find-window "ZOOM[ ]MARK" \; swap-pane -s tmux-zoom.0 \; last-window \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
 unbind -
 bind - find-window "ZOOM[ ]MARK" \; swap-pane -s tmux-zoom.0
+
+set -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
