max/min tmux window shortcuts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,9 +2,9 @@
 set -g prefix C-a
 
 unbind +
-bind + find-window "ZOOM[ ]MARK" \; swap-pane -s tmux-zoom.0 \; last-window \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
+bind + new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
 unbind -
-bind - find-window "ZOOM[ ]MARK" \; swap-pane -s tmux-zoom.0
+bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
 
 set -g mode-mouse on
 set -g mouse-select-pane on
