--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@ bind + new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \; swap-pane
 unbind -
 bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
 
+bind-key b send-keys -R \; clear-history
+
 set -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
