vim fugitive and gitignore

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "/Users/shuw/.vim/bundle/vim-jade"]
 	path = /Users/shuw/.vim/bundle/vim-jade
 	url = git://github.com/digitaltoad/vim-jade.git
+[submodule "/Users/shuw/.vim/bundle/vim-fugitive"]
+	path = /Users/shuw/.vim/bundle/vim-fugitive
+	url = git://github.com/tpope/vim-fugitive.git
