vim-like copy paste for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,10 @@ unbind -
 bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
 
 bind-key b send-keys -R \; clear-history
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+unbind p
+bind p paste-buffer
 
 set -g mode-mouse on
 set -g mouse-select-pane on
