--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ bind-key -t vi-copy 'y' copy-selection
 unbind p
 bind p paste-buffer
 
+set -g status-right ''
 set -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
