--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # Commands use ctrl-a instead of ctrl-b
 set -g prefix C-a
+set -g history-limit 50000
 
 unbind +
 bind + new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
