--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,3 +19,15 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 setw -g mode-keys vi
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+# start window numbering at 1 for easier switching
+set -g base-index 1
+
+# status bar config
+set -g status-left-length 50
+set -g status-left "#h:[#S]"
+set-window-option -g automatic-rename off
