--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,3 +28,21 @@ bind r source-file ~/.tmux.conf
 set -g status-left-length 50
 set -g status-left "#h:[#S]"
 set-window-option -g automatic-rename off
+
+# use UTF8
+set -g utf8
+set-window-option -g utf8 on
+
+# make tmux display things in 256 colors
+set -g default-terminal "screen-256color"
+
+# ----------------------
+# set some pretty colors
+# ----------------------
+# set pane colors - hilight the active pane
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# colorize messages in the command line
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
