--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,9 +40,12 @@ set -g default-terminal "screen-256color"
 # set some pretty colors
 # ----------------------
 # set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set -g pane-border-fg colour235 #base02
+set -g pane-active-border-fg colour240 #base01
 
 # colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set -g message-bg black #base02
+set -g message-fg brightred #orange
+
+set -g status-bg black
+set -g status-fg white
