tmux opens new windows at the same path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,8 +36,10 @@ set-window-option -g utf8 on
 # make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
 
-
-
+# start new window in current path
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 
 #### COLOUR (Solarized dark)
