compatibility with 1.9 and 1.8

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,10 +37,21 @@ set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
 
 # start new window in current path
-set -g default-path "~"
-bind % set default-path "" \; split-window -h \; set -u default-path
-bind '"' set default-path "" \; split-window -v \; set -u default-path
-bind 'c' set default-path "" \; new-window \; set -u default-path
+if-shell "[[ `tmux -V` == *1.9 ]]" \
+  "bind '\"' split-window -c \"#{pane_current_path}\""
+if-shell "[[ `tmux -V` == *1.9 ]]" \
+  "bind % split-window -h -c \"#{pane_current_path}\""
+if-shell "[[ `tmux -V` == *1.9 ]]" \
+  "bind c new-window -c \"#{pane_current_path}\""
+
+if-shell "[[ `tmux -V` == *1.8 ]]" \
+  'set -g default-path "~"'
+if-shell "[[ `tmux -V` == *1.8 ]]" \
+  "bind % set default-path \"\" \\; split-window -h \\; set -u default-path"
+if-shell "[[ `tmux -V` == *1.8 ]]" \
+  "bind '\"' set default-path \"\" \\; split-window -v \\; set -u default-path"
+if-shell "[[ `tmux -V` == *1.8 ]]" \
+  "bind 'c' set default-path \"\" \\; new-window \\; set -u default-path"
 
 
 #### COLOUR (Solarized dark)
