--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,10 +9,7 @@ unbind p
 bind p paste-buffer
 
 set -g status-right ''
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 setw -g mode-keys vi
 
 # force a reload of the config file
@@ -21,12 +18,8 @@ bind r source-file ~/.tmux.conf
 
 # status bar config
 set -g status-left-length 50
-set -g status-left "#h:[#S]"
+set -g status-left "#h:[#S] "
 set-window-option -g automatic-rename off
-
-# use UTF8
-set -g utf8
-set-window-option -g utf8 on
 
 # make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
