tmux keep path, remove version check

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,12 +25,9 @@ set-window-option -g automatic-rename off
 set -g default-terminal "screen-256color"
 
 # start new window in current path
-if-shell "[[ `tmux -V` == *1.9* ]]" \
-  "bind '\"' split-window -c \"#{pane_current_path}\""
-if-shell "[[ `tmux -V` == *1.9* ]]" \
-  "bind % split-window -h -c \"#{pane_current_path}\""
-if-shell "[[ `tmux -V` == *1.9* ]]" \
-  "bind c new-window -c \"#{pane_current_path}\""
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 if-shell "[[ `tmux -V` == *1.8* ]]" \
   'set -g default-path "~"'
