--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,8 @@
   of = diff trunk --name-only
   c = commit
   r = rebase
+  wc = whatchanged --stat
+  graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}'; }; f"
 [core]
   editor = vim
 [push]
@@ -23,3 +25,8 @@
   path = ~/profile/gitconfig
 [credential]
 	helper = cache
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
