--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
   r = rebase
   wc = whatchanged --stat
   graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}'; }; f"
+  gsub = "!f() { git grep -l \"$1\" | xargs sed -i '' -e \"s/$1/$2/g\"; }; f"
 [core]
   editor = vim
 [push]
